--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^2.3.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.0",
+    "immutable": "^3.7.6",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
